# Generic-Robot-Framework-Examples

./: .gitignore  Cargo.toml  Package.toml
src/: lib.rs
src/client_example/: Cargo.toml
src/client_example/src/msg/: example_message.rs  mod.rs
src/launch/: example_launch_group.rs  mod.rs
