[package]
name = "client_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
schemars = "0.8.12"
generic_robot_framework = { path = "..\\..\\..\\lib" }

#generic_robot_framework = "0.1.0"
